# django

./: Dockerfile  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
mysite/shopapp/: forms.py
